# DataPipeline

./: .gitignore  DATA_QUALITY_STEPS_2_3_GAP_ANALYSIS.md  IMPLEMENTATION_PLAN.md  PIPELINE_INTEGRATION_PLAN.md  PIPELINE_MONITORING_AND_ISSUE_REPORTING_PLAN.md  QA_DATABASE_QUERY_GUIDE.md  QA_PHASE_DECISION_RULES.md  QA_PIPELINE_OVERVIEW.md  QA_PIPELINE_PHASE_ANALYSIS_REPORT.md  QA_PIPELINE_USER_GUIDE.md  QA_PIPELINE_USER_GUIDE_ZH.md  README.md  README_EN.md  STANDSTILL_TRIM_IMPLEMENTATION_PLAN.md  annotate_standstill.py  clean_invalid_episodes.py  correct_teleop_folders.py  issue_reference.csv  pipeline_phases_compact.txt  run_cleanup.sh  seed_jobs.sh  simulate_live_jobs.sh  trickle_jobs.sh  trickle_jobs_compat.sh
DataProcessUMI/: .gitignore  README.md  USAGE.md  requirements.txt
DataProcessUMI/assessment/: README.md  check_focus.py  check_label_similarity.py  validate_raw_data.py  (+1 more)
QA_Pipeline/: .gitignore  README.md  requirements.txt
UMI_Data_Validation/: .gitignore  README.md  deploy_ubuntu.sh  ik_benchmark.py  requirements.txt
Werkzeuge/: analyze_motion_abnormalities.py  check_episode_durations.py  listen_episode_verified.py
dcp-sdk/: .gitignore  README.md  dcs_config.json.example  demo.py  pyproject.toml
dcp-sdk/dcs_sdk/: __init__.py  auth.py  config.py  control_events.py  events.py  hardware_events.py  identity.py  nas.py  temporal.py
dcp-sdk/event_center/: __init__.py  config.py
dcp-sdk/event_center/bus/: event_bus.py
dcp-sdk/event_center/client/: event_client.py
dcp-sdk/event_center/events/: base.py
dcp-sdk/tests/: test_event_listener.py
(+96 files in other folders)
