[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dcs-sdk"
version = "1.0.0"
description = "DCS 事件总线 SDK — RabbitMQ 消息发布与订阅"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "aio-pika>=9.0",
    "python-jose>=3.0",
]

[tool.setuptools.packages.find]
include = ["dcs_sdk*", "event_center*"]
